kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend-container
          image: homeease-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
