kubernetes/backend-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: backend-pod
  labels:
    app: backend

spec:
  containers:
    - name: backend-container
      image: srinidhisanjeevi/homeease-backend:v2
      ports:
        - containerPort: 5000
