kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend-container
          image: homeease-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
